--- a/index.html
+++ b/index.html
@@ -11,6 +11,37 @@
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
+        /* ------------------------------------------------ */
+/* START OF MOBILE RESPONSIVE FIXES        */
+/* ------------------------------------------------ */
+
+@media screen and (max-width: 600px) {
+
+    /* This rule makes sure all images and videos fit inside the screen */
+    img, video {
+        max-width: 100%;
+        height: auto;
+    }
+
+    /* This rule fixes the layout of your columns (if you have them) */
+    .main-content, .sidebar, .column {
+        width: 100%;       /* Force them to take up the full screen width */
+        float: none;       /* Remove floating effects */
+        padding: 10px;
+    }
+
+    /* This rule fixes your header/navigation (e.g., stacking menu items) */
+    .header, .nav-container {
+        flex-direction: column; /* Stacks items top-to-bottom */
+        align-items: center;    /* Centers them horizontally */
+    }
+
+    /* Add any other specific fixes here */
+}
+
+/* ------------------------------------------------ */
+/* END OF MOBILE RESPONSIVE FIXES          */
+/* ------------------------------------------------ */
         /* BASE STYLES */
         body {
             scroll-behavior: smooth;
