--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     
     /* 2. Fix the Nav Links (Home, Review, Benefits, etc.) */
     .nav-links {
+        display: flex;
         flex-direction: column; /* Stacks the individual menu items vertically */
         width: 100%;
         text-align: left;
